# US-AI

./: .replit  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  python-nix-workflow.md
artifacts/api-server/: database.py  main.py  requirements.txt
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/lib/: ai.py  file_parser.py
artifacts/api-server/routes/: analyses.py
artifacts/app/: index.html  package.json
artifacts/app/.replit-artifact/: artifact.toml
artifacts/app/src/: App.tsx  index.css
artifacts/app/src/components/: analysis-card.tsx  upload-zone.tsx
artifacts/app/src/components/mind-map/: custom-node.tsx  index.tsx
artifacts/app/src/components/ui/: badge.tsx  button.tsx
artifacts/app/src/hooks/: use-upload.ts
artifacts/app/src/lib/: utils.ts
artifacts/app/src/pages/: analysis.tsx  home.tsx
attached_assets/: Pasted-Phase-1-Architecture-Tech-Stack-Selection-Before-writin_1783252694992.txt
lib/api-spec/: openapi.yaml
lib/db/src/schema/: analyses.ts
