[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "openai>=2.44.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pymupdf>=1.28.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.50.0",
]
